crates/runtime/benches/snapshots/bench__s3_arrow_memory_use_source_tpch_simple_q4.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+---------------------+--------------+------------+
| avg(lineitem.l_tax) | l_linenumber | l_quantity |
+---------------------+--------------+------------+
| 0.039805            | 2            | 50.00      |
| 0.039947            | 1            | 50.00      |
| 0.039881            | 6            | 50.00      |
| 0.040261            | 5            | 50.00      |
| 0.039749            | 7            | 50.00      |
| 0.040165            | 4            | 50.00      |
| 0.040225            | 3            | 50.00      |
| 0.040169            | 4            | 49.00      |
| 0.039798            | 1            | 49.00      |
| 0.040615            | 6            | 49.00      |
+---------------------+--------------+------------+
