crates/runtime/benches/snapshots/bench__s3_duckdb_file_tpch_simple_q4.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+---------------------+--------------+------------+
| avg(lineitem.l_tax) | l_linenumber | l_quantity |
+---------------------+--------------+------------+
| 0.040225            | 3            | 50.00      |
| 0.039805            | 2            | 50.00      |
| 0.040165            | 4            | 50.00      |
| 0.039947            | 1            | 50.00      |
| 0.039749            | 7            | 50.00      |
| 0.039881            | 6            | 50.00      |
| 0.040262            | 5            | 50.00      |
| 0.040616            | 6            | 49.00      |
| 0.039861            | 5            | 49.00      |
| 0.039799            | 1            | 49.00      |
+---------------------+--------------+------------+
