crates/runtime/benches/snapshots/bench__s3_duckdb_file_use_source_clickbench_q33.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+---------------------+-------------+---+---------------------+---------------------------+
| WatchID             | ClientIP    | c | sum(hits.IsRefresh) | avg(hits.ResolutionWidth) |
+---------------------+-------------+---+---------------------+---------------------------+
| 6655575552203051303 | 1611957945  | 2 | 0                   | 1638.0                    |
| 7224410078130478461 | -776509581  | 2 | 0                   | 1368.0                    |
| 7904046282518428963 | 1509330109  | 2 | 0                   | 1368.0                    |
| 8566928176839891583 | -1402644643 | 2 | 0                   | 1368.0                    |
| 8863282788606566657 | -1216690514 | 1 | 0                   | 0.0                       |
| 6058627581446482769 | 41269655    | 1 | 0                   | 1368.0                    |
| 7431898112455259805 | 1190854685  | 1 | 1                   | 1638.0                    |
| 8651233415492750131 | 1190854685  | 1 | 0                   | 1638.0                    |
| 4894690465724379622 | 1568366281  | 1 | 0                   | 0.0                       |
| 6548098953254805690 | 41269655    | 1 | 1                   | 1368.0                    |
+---------------------+-------------+---+---------------------+---------------------------+
