crates/runtime/benches/snapshots/bench__s3_duckdb_file_use_source_tpch_simple_q3.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+--------------------------------------------+-----------+
| l_comment                                  | l_partkey |
+--------------------------------------------+-----------+
| ecial theodolites. slyly ironic            | 167828    |
| blithely even pearls was slyly regular in  | 3037      |
| ithely about                               | 157238    |
|  slyly bold notornis wake quickly blithely | 37435     |
| ly pending packages wake slyly             | 168569    |
| en hockey players. speci                   | 42134     |
| requests. b                                | 141233    |
| ly. blithely unusual deposits against      | 117961    |
| sly ironic requests. final                 | 4660      |
| ravely busy pinto beans. regular, r        | 139247    |
+--------------------------------------------+-----------+
