crates/runtime/benches/snapshots/bench__s3_duckdb_memory_use_source_clickbench_q33.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+---------------------+-------------+---+---------------------+---------------------------+
| WatchID             | ClientIP    | c | sum(hits.IsRefresh) | avg(hits.ResolutionWidth) |
+---------------------+-------------+---+---------------------+---------------------------+
| 8566928176839891583 | -1402644643 | 2 | 0                   | 1368.0                    |
| 7904046282518428963 | 1509330109  | 2 | 0                   | 1368.0                    |
| 7224410078130478461 | -776509581  | 2 | 0                   | 1368.0                    |
| 6655575552203051303 | 1611957945  | 2 | 0                   | 1638.0                    |
| 8421144619702400052 | -1680975811 | 1 | 0                   | 1087.0                    |
| 6897554432495327423 | -1680975811 | 1 | 0                   | 1087.0                    |
| 4716837371525832721 | -1680975811 | 1 | 0                   | 1087.0                    |
| 6128405985701268557 | -1680975811 | 1 | 0                   | 1087.0                    |
| 5408077038727635362 | -1680975811 | 1 | 1                   | 1087.0                    |
| 6851415925482736665 | -1680975811 | 1 | 0                   | 1087.0                    |
+---------------------+-------------+---+---------------------+---------------------------+
