crates/runtime/benches/snapshots/bench__s3_postgres_memory_tpch_simple_q3.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
snapshot_kind: text
---
+-----------------------------------------+-----------+
| l_comment                               | l_partkey |
+-----------------------------------------+-----------+
| ng packages c                           | 181037    |
| ag slyly. quietly regular instructions  | 113275    |
| special accounts use carefully regular, | 51856     |
| y special pinto beans wake              | 156099    |
| telets detect a                         | 152253    |
|  cajole unusual                         | 87440     |
|  slyly even foxes. unusual, regular p   | 177671    |
| ggle. furiously final pla               | 154362    |
|  about the slyly                        | 42604     |
| ely blithe packages. closely pe         | 133493    |
+-----------------------------------------+-----------+
